--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "bootstrap-vue": "^0.9.2",
+    "element-ui": "^1.2.1",
     "vue": "^2.1.10",
     "vue-router": "^2.2.0"
   },
@@ -27,6 +29,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "bootstrap-sass": "^3.3.7",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "chromedriver": "^2.27.2",
@@ -61,12 +64,14 @@
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
+    "node-sass": "^4.5.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
     "phantomjs-prebuilt": "^2.1.14",
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
+    "sass-loader": "^6.0.2",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
